<resources>
    <string name="app_name">Permissions App</string>
    <string name="choose_what_to_allow_app_to_access">Choose what to allow APP to access</string>
    <string name="storage">Storage</string>
    <string name="storage_description">Access all downloaded media on phone.</string>
    <string name="location">Location</string>
    <string name="location_description">Access the location of this device.</string>
    <string name="camera">Camera</string>
    <string name="camera_description">Access to use the camera.</string>
    <string name="phone">Phone</string>
    <string name="phone_description">Access to use the phone.</string>
    <string name="contacts">Contacts</string>
    <string name="contacts_description">Access to your contacts.</string>
</resources>